--- a/doc/errata/staging/ucs-school-umc-groups.yaml
+++ b/doc/errata/staging/ucs-school-umc-groups.yaml
@@ -5,6 +5,6 @@ scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-umc-groups
 fix: 8.0.0-3A~4.3.0.201805232217
 desc: |
- * Overhaul ucr variable descriptions as statet in comment #14 of (Bug #45601)
- * Fix SyntaxError on systems that have Python 2.6 installed (Bug #44846).
+ * The UCR variable descriptions regarding autosearch have been revised (Bug #45601).
+ * A SyntaxError has been fixed that occurred on systems that have Python 2.6 installed (Bug #44846).
 bug: [45601, 44846]
