--- a/doc/errata/staging/ucs-school-umc-lists.yaml
+++ b/doc/errata/staging/ucs-school-umc-lists.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-umc-lists
 fix: 1.0.0-6A~4.3.0.201806131250
 desc: |
- * Add a new module to the education tab for exporting class and workgroup lists. The lists are exported in the CSV format. The new module is activated for administrators and teachers (Bug #47017).
+ * A new UMC module has been added to the education tab for exporting class and workgroup lists. The lists are exported in the CSV format and contains the coloums username, first name, last name and class. The new module is activated for administrators and teachers by default (Bug #47017).
 bug: [47017]
