--- a/doc/errata/staging/0template.yaml
+++ b/doc/errata/staging/0template.yaml
@@ -1,10 +1,10 @@
 product: ucsschool
 release: "4.3"
-version: [0]
+version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: 
 fix: 
 desc: |
- * May contain docbook tags like <package>package</package> or <envar>foo/bar/ding=dong</envar> (Bug #00000)
- * The line length is *NOT* limited to 80 columns! (Bug #00000)
+ * May contain docbook tags like <package>package</package> or <envar>foo/bar/ding=dong</envar> (Bug #00000).
+ * The line length is *NOT* limited to 80 columns! (Bug #00000).
 bug: []
