--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-import
-fix: 16.0.2-28A~4.3.0.201807301512
+fix: 16.0.2-29A~4.3.0.201807301725
 desc: |
  * The UMC import module now shows a summary after a sucessfull dry-run (Bug #46712).
  * Internal change: a new exception type has been introduced, to skip single import users on non-fatal errors (Bug #47162).
@@ -14,4 +14,6 @@ desc: |
  * Internal change: several typos in class names have been fixed (Bug #47311).
  * Internal cleanup: removed unreachable code (Bug #47413).
  * A JSON configuration file for using the ucs-school-testuser-import script to test a HTTP-API-import and hints how to use it were added (Bug #47277).
-bug: [46712,47162,47221,47302,47304,47305,47311,47413,47277]
+ * The import now checks the most common errors in dry-runs (Bug #45715).
+ * In dry run, a read-only cn=admin LDAP connection is used (Bug #47203).
+bug: [46712,47162,47221,47302,47304,47305,47311,47413,47277,45715,47203]
