--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-import
-fix: 16.0.2-31A~4.3.0.201808030914
+fix: 16.0.2-32A~4.3.0.201808031231
 desc: |
  * The UMC import module now shows a summary after a sucessfull dry-run (Bug #46712).
  * Internal change: a new exception type has been introduced, to skip single import users on non-fatal errors (Bug #47162).
@@ -18,4 +18,5 @@ desc: |
  * In dry run, a read-only cn=admin LDAP connection is used (Bug #47203).
  * Code and configuration for a scenario with a single source database with global record UIDs and partial user import files was implemented (Bug #47447).
  * An interface for adding custom configuration checks has been added (Bug #47448).
-bug: [46712,47162,47221,47302,47304,47305,47311,47413,47277,45715,47203,47447,47448]
+ * A user is not moved to another school, when that school is imported to be an additional school for the user and the schools name is alphanumerically sorted earlier that the school the user is already a member of (Bug #47450).
+bug: [46712,47162,47221,47302,47304,47305,47311,47413,47277,45715,47203,47447,47448,47450]
