--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-import
-fix: 16.0.2-34A~4.3.0.201808061137
+fix: 16.0.2-35A~4.3.0.201808081445
 desc: |
  * The UMC import module now shows a summary after a successful dry-run (Bug #46712).
  * Internal change: a new exception type has been introduced, to skip single import users on non-fatal errors (Bug #47162).
@@ -20,4 +20,5 @@ desc: |
  * An interface for adding custom configuration checks has been added (Bug #47448).
  * A user is not moved to another school, when that school is imported to be an additional school for the user and the schools name is alphanumerically sorted earlier that the school the user is already a member of (Bug #47450).
  * Don't create roles in import when feature is deactivated (Bug #47451).
-bug: [46712,47162,47221,47302,47304,47305,47311,47413,47277,45715,47203,47447,47448,47450,47451]
+ * File permissions are set correctly now on initial installations of the HTTP-API import (Bug #47514).
+bug: [46712,47162,47221,47302,47304,47305,47311,47413,47277,45715,47203,47447,47448,47450,47451,47514]
