--- a/ucs-school-lib/debian/control
+++ b/ucs-school-lib/debian/control
@@ -14,6 +14,7 @@ Package: python-ucs-school
 Architecture: all
 Depends: ${misc:Depends},
  ${python:Depends},
+ python-six,
  univention-management-console,
  univention-config-registry,
  python-univention-directory-manager,
