--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,10 +3,11 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-import
-fix: 15.0.3-65A~4.2.0.201808081421
+fix: 15.0.3-66A~4.2.0.201808281202
 desc: |
  * The import now checks the most common errors in dry-runs (Bug #46837).
  * The UMC import module now shows a summary after a successful dry-run (Bug #46838).
  * In dry run, a read-only cn=admin LDAP connection is used (Bug #47204).
  * File permissions are set correctly now on initial installations of the HTTP-API import (Bug #47472).
-bug: [46837, 46838, 47204, 47472]
+ * Use a different account for authentication on each DC backup (Bug #47682).
+bug: [46837, 46838, 47204, 47472, 47682]
