--- a/doc/errata/staging/ucs-school-l10n-fr.yaml
+++ b/doc/errata/staging/ucs-school-l10n-fr.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-l10n-fr
-fix: 
+fix: 3.0.0-2A~4.3.0.201808291430
 desc: |
  * Update translation (Bug #47386).
 bug: [47386]
