--- a/doc/errata/staging/ucs-school-umc-internetrules.yaml
+++ b/doc/errata/staging/ucs-school-umc-internetrules.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-umc-internetrules
-fix: 
+fix: 14.0.0-2A~4.3.0.201808291312
 desc: |
  * Changed description in case no rule is set to distinguish that better from the default rule (Bug #47386).
 bug: [47386]
