--- a/ucs-school-import/debian/rules
+++ b/ucs-school-import/debian/rules
@@ -32,17 +32,24 @@
 PO_FILES := $(shell find udm_hook syntax modules -name '*.po')
 MO_FILES := $(PO_FILES:%.po=%.mo)
 
-APIDOCSRC_FILES := $(shell find usr/share/doc/ucs-school-import-http-api/source/ -name '*.rst' -o -name '*.png')
+APIDOC_BASE_DIR := usr/share/doc/ucs-school-import-http-api
+APIDOCSRC_DIR := $(APIDOC_BASE_DIR)/source
+PLANTUML_DIR := $(APIDOC_BASE_DIR)/plantuml
+APIDOCSRC_FILES := $(shell find $(APIDOCSRC_DIR) -name '*.rst' -o -name '*.png')
 PYMODULESRC_FILES := $(shell find modules/ -name '*.py')
 
 %.mo:	%.po
 	msgfmt --check -o $@ $<
 
-pymoduledoc: $(PYMODULESRC_FILES)
-	sphinx-apidoc --force --private --no-toc -o usr/share/doc/ucs-school-import-http-api/source/python/ modules/
+plantuml:
+	make -C $(PLANTUML_DIR)
+	cp -v $(PLANTUML_DIR)/*.png $(PLANTUML_DIR)/*.svg $(APIDOCSRC_DIR)
 
-apidoc:	$(APIDOCSRC_FILES) pymoduledoc
-	make -C usr/share/doc/ucs-school-import-http-api/ html
+pymoduledoc: $(PYMODULESRC_FILES)
+	sphinx-apidoc --force --private --no-toc -o $(APIDOCSRC_DIR)/python/ modules/
+
+apidoc:	$(APIDOCSRC_FILES) plantuml pymoduledoc
+	make -C$(APIDOC_BASE_DIR) html
 
 override_dh_auto_build: $(MO_FILES) apidoc
 	dh_auto_build
@@ -62,8 +69,9 @@ override_dh_auto_clean:
 	dh_auto_clean
 	rm -f debian/ucs-school-import.conffiles
 	rm -f debian/ucs-school-import-schema.conffiles
-	make -C usr/share/doc/ucs-school-import-http-api/ clean
-	rm -f usr/share/doc/ucs-school-import-http-api/source/python/*
+	make -C $(APIDOC_BASE_DIR) clean
+	make -C $(PLANTUML_DIR) clean
+	rm -f $(APIDOCSRC_DIR)/python/*
 
 override_dh_auto_test:
 	dh_auto_test
