--- a/ucs-school-import/usr/share/doc/ucs-school-import-http-api/plantuml/Makefile
+++ b/ucs-school-import/usr/share/doc/ucs-school-import-http-api/plantuml/Makefile
@@ -12,3 +12,6 @@ all: $(foreach i,$(INPUT),$(foreach f,$(FORMATS), $(addsuffix .$f,$(basename $i)
 
 %.svg: %.md
 	java -jar plantuml.jar -nbthread auto -failfast2 -tsvg $<
+
+clean:
+	rm -f *.png *.svg
