--- a/ucs-school-import/debian/control
+++ b/ucs-school-import/debian/control
@@ -9,7 +9,11 @@ Build-Depends: debhelper (>> 10),
  python-sphinx-rtd-theme,
  make,
  python2.7-doc,
- default-jre
+ default-jre,
+ python-ucs-school,
+ python-djangorestframework (>= 3.4.0-2),
+ python-django-celery (>=3.1.16-1),
+ python-django-filter (>=1.0.1-1),
 Standards-Version: 3.8.2
 XS-Python-Version: 2.7
 
