Bug #47757: update branch-test config

--- a/test/branch-tests/base/school-singlemaster.cfg
+++ b/test/branch-tests/base/school-singlemaster.cfg
@@ -21,7 +21,8 @@ recover: 2
 
 [master]
 environment:
- GIT_BRANCH=[ENV:GIT_BRANCH]
+ UCS_BRANCH=[ENV:UCS_BRANCH]
+ UCSSCHOOL_BRANCH=[ENV:UCSSCHOOL_BRANCH]
  TEST_SECTIONS=[ENV:TEST_SECTIONS]
  TEST_TAGS=[ENV:TEST_TAGS]
  UCS_VERSION=[ENV:UCS_VERSION]
@@ -49,7 +50,7 @@ command1:
  . utils.sh && import_license
  . utils.sh && install_apps ucsschool
  . utils.sh && run_join_scripts
- /usr/sbin/schoolinstaller.py -uAdministrator -p univention -o gsmitte -S -s 4
+ ./schoolinstaller.py -uAdministrator -p univention -o school1 -S -s 4
  . utils.sh && run_join_scripts
  . utils.sh && install_ucs_test
  . utils.sh && do_reboot
