--- a/test/branch-tests/base/school-two-slaves.cfg
+++ b/test/branch-tests/base/school-two-slaves.cfg
@@ -21,7 +21,8 @@ recover: 4
 
 [master]
 environment:
- GIT_BRANCH=[ENV:GIT_BRANCH]
+ UCS_BRANCH=[ENV:UCS_BRANCH]
+ UCSSCHOOL_BRANCH=[ENV:UCSSCHOOL_BRANCH]
  UCS_VERSION=[ENV:UCS_VERSION]
  ERRATA_TESTS=[ENV:ERRATA_TESTS]
  APT_REPO=[ENV:APT_REPO]
@@ -48,7 +49,7 @@ command1:
 command2:
  . utils.sh && install_apps ucsschool
  . utils.sh && run_join_scripts
- /usr/sbin/schoolinstaller.py -uAdministrator -p univention -M
+ ./schoolinstaller.py -uAdministrator -p univention -M
  . utils.sh && run_join_scripts
 command3:
  . utils.sh && do_reboot
@@ -61,7 +62,8 @@ files:
 
 [slave1]
 environment:
- GIT_BRANCH=[ENV:GIT_BRANCH]
+ UCS_BRANCH=[ENV:UCS_BRANCH]
+ UCSSCHOOL_BRANCH=[ENV:UCSSCHOOL_BRANCH]
  TEST_SECTIONS=[ENV:TEST_SECTIONS]
  TEST_TAGS=[ENV:TEST_TAGS]
  UCS_VERSION=[ENV:UCS_VERSION]
@@ -91,7 +93,7 @@ command1:
 command2:
  . utils.sh && install_apps ucsschool
  . utils.sh && run_join_scripts
- /usr/sbin/schoolinstaller.py -uAdministrator -p univention -o gsmitte -M -e -s 4
+ ./schoolinstaller.py -uAdministrator -p univention -o gsmitte -M -e -s 4
  . utils.sh && run_join_scripts
 command3:
  . utils.sh && do_reboot
@@ -106,7 +108,8 @@ files:
 
 [slave2]
 environment:
- GIT_BRANCH=[ENV:GIT_BRANCH]
+ UCS_BRANCH=[ENV:UCS_BRANCH]
+ UCSSCHOOL_BRANCH=[ENV:UCSSCHOOL_BRANCH]
  TEST_SECTIONS=[ENV:TEST_SECTIONS]
  TEST_TAGS=[ENV:TEST_TAGS]
  UCS_VERSION=[ENV:UCS_VERSION]
@@ -136,7 +139,7 @@ command1:
 command2:
  . utils.sh && install_apps ucsschool
  . utils.sh && run_join_scripts
- /usr/sbin/schoolinstaller.py -uAdministrator -p univention -o west -M -e -s 4
+ ./schoolinstaller.py -uAdministrator -p univention -o west -M -e -s 4
  . utils.sh && run_join_scripts
 command3:
  . utils.sh && do_reboot
