--- a/test/branch-tests/base/school-two-slaves.cfg
+++ b/test/branch-tests/base/school-two-slaves.cfg
@@ -46,6 +46,7 @@ command1:
  . utils.sh && jenkins_updates
  . utils.sh && run_setup_join
  . utils.sh && import_license
+ GET_NETWORK_DHCP_IP
 command2:
  . utils.sh && install_apps ucsschool
  . utils.sh && run_join_scripts
@@ -81,8 +82,8 @@ profile:
  server/role="domaincontroller_slave"
  interfaces/eth0/type="dhcp"
  interfaces/eth1/type="dhcp"
- nameserver=[master_IP]
 command1:
+ ucr set nameserver1="[master_NETWORK_DHCP_IP]"
  . utils.sh && basic_setup
  . utils.sh && add_tech_key_authorized_keys
  . utils.sh && rotate_logfiles
@@ -127,8 +128,8 @@ profile:
  server/role="domaincontroller_slave"
  interfaces/eth0/type="dhcp"
  interfaces/eth1/type="dhcp"
- nameserver=[master_IP]
 command1:
+ ucr set nameserver1="[master_NETWORK_DHCP_IP]"
  . utils.sh && basic_setup
  . utils.sh && add_tech_key_authorized_keys
  . utils.sh && rotate_logfiles
