Bug #47757: Fail if setup was not successful

--- a/test/branch-tests/base/school-singlemaster.cfg
+++ b/test/branch-tests/base/school-singlemaster.cfg
@@ -47,11 +47,13 @@ command1:
  . utils.sh && add_branch_repository
  . utils.sh && jenkins_updates
  . utils.sh && run_setup_join
+ . utils.sh && assert_join
  . utils.sh && import_license
  . utils.sh && install_apps ucsschool
  . utils.sh && run_join_scripts
  ./schoolinstaller.py -uAdministrator -p univention -o school1 -S -s 4
  . utils.sh && run_join_scripts
+ . utils.sh && assert_join
  . utils.sh && install_ucs_test
  . utils.sh && do_reboot
  LOCAL sleep 120
