--- a/test/branch-tests/base/school-two-slaves.cfg
+++ b/test/branch-tests/base/school-two-slaves.cfg
@@ -45,6 +45,7 @@ command1:
  . utils.sh && add_branch_repository
  . utils.sh && jenkins_updates
  . utils.sh && run_setup_join
+ . utils.sh && assert_join
  . utils.sh && import_license
  GET_NETWORK_DHCP_IP
 command2:
@@ -52,6 +53,7 @@ command2:
  . utils.sh && run_join_scripts
  ./schoolinstaller.py -uAdministrator -p univention -M
  . utils.sh && run_join_scripts
+ . utils.sh && assert_join
 command3:
  . utils.sh && do_reboot
  . utils.sh && wait_for_reboot
@@ -90,12 +92,14 @@ command1:
  . utils.sh && add_branch_repository
  . utils.sh && jenkins_updates
  . utils.sh && run_setup_join_on_non_master
+ . utils.sh && assert_join
  . utils.sh && install_ucs_test
 command2:
  . utils.sh && install_apps ucsschool
  . utils.sh && run_join_scripts
  ./schoolinstaller.py -uAdministrator -p univention -o gsmitte -M -e -s 4
  . utils.sh && run_join_scripts
+ . utils.sh && assert_join
 command3:
  . utils.sh && do_reboot
  LOCAL sleep 120
@@ -136,12 +140,14 @@ command1:
  . utils.sh && add_branch_repository
  . utils.sh && jenkins_updates
  . utils.sh && run_setup_join_on_non_master
+ . utils.sh && assert_join
  . utils.sh && install_ucs_test
 command2:
  . utils.sh && install_apps ucsschool
  . utils.sh && run_join_scripts
  ./schoolinstaller.py -uAdministrator -p univention -o west -M -e -s 4
  . utils.sh && run_join_scripts
+ . utils.sh && assert_join
 command3:
  . utils.sh && do_reboot
  LOCAL sleep 120
