Bug #47757: make ucs-test results assignable if the tests are executed on more than one system

--- a/test/branch-tests/base/school-two-slaves.cfg
+++ b/test/branch-tests/base/school-two-slaves.cfg
@@ -57,6 +57,8 @@ command2:
 command3:
  . utils.sh && do_reboot
  . utils.sh && wait_for_reboot
+ . utils.sh && run_tests -s checks
+ . utils.sh && add_hostname_to_juint_results
 command4:
  LOCAL utils/utils-local.sh fetch-results [master_IP] master
 files:
@@ -104,7 +106,8 @@ command3:
  . utils.sh && do_reboot
  LOCAL sleep 120
  . utils.sh && wait_for_reboot
- . utils.sh && run_tests [ENV:TEST_SECTIONS] [ENV:TEST_TAGS] -s checks
+ . utils.sh && run_tests -s checks
+ . utils.sh && add_hostname_to_juint_results
 command4:
  LOCAL utils/utils-local.sh fetch-results [slave1_IP] slave1
 files:
@@ -153,6 +156,7 @@ command3:
  LOCAL sleep 120
  . utils.sh && wait_for_reboot
  . utils.sh && run_tests [ENV:TEST_SECTIONS] [ENV:TEST_TAGS] -s checks
+ . utils.sh && add_hostname_to_juint_results
 command4:
  LOCAL utils/utils-local.sh fetch-results [slave2_IP] slave2
 files:
