Bug #47757: Restart services before starting the tests. This can be removed after Bug #47762 is fixes

--- a/test/branch-tests/base/school-two-slaves.cfg
+++ b/test/branch-tests/base/school-two-slaves.cfg
@@ -58,6 +58,8 @@ command2:
 command3:
  . utils.sh && do_reboot
  . utils.sh && wait_for_reboot
+ . utils.sh && run_workarounds_before_starting_the_tests
+ . utils.sh && run_workarounds_before_starting_the_tests
  . utils.sh && run_tests -s checks
  . utils.sh && add_hostname_to_juint_results
 command4:
@@ -107,6 +109,7 @@ command3:
  . utils.sh && do_reboot
  LOCAL sleep 120
  . utils.sh && wait_for_reboot
+ . utils.sh && run_workarounds_before_starting_the_tests
  . utils.sh && run_tests -s checks
  . utils.sh && add_hostname_to_juint_results
 command4:
@@ -156,6 +159,7 @@ command3:
  . utils.sh && do_reboot
  LOCAL sleep 120
  . utils.sh && wait_for_reboot
+ . utils.sh && run_workarounds_before_starting_the_tests
  . utils.sh && run_tests [ENV:TEST_SECTIONS] [ENV:TEST_TAGS] -s checks
  . utils.sh && add_hostname_to_juint_results
 command4:
