--- a/test/branch-tests/base/school-singlemaster424.cfg
+++ b/test/branch-tests/base/school-singlemaster424.cfg
@@ -12,10 +12,10 @@ kvm_interface: eth0
 kvm_extra_label: appliance-test-ucs
 
 # template configuration
-kvm_template: installation
-kvm_operating_system: Others
+kvm_template: generic-unsafe
+kvm_operating_system: UCS
 kvm_architecture: amd64
-kvm_ucsversion: 4.2-3
+kvm_ucsversion: 4.2-4
 
 recover: 2
 
