--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,9 +3,10 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-import
-fix: 16.0.2-52A~4.3.0.201809281403
+fix: 16.0.2-53A~4.3.0.201810010952
 desc: |
  * Even when the import abots, statistics are now still written to the terminal, passwords and summary CSV files are written to disk (Bug #45673).
  * CSV files encoded in <literal>ISO 8859-1</literal> (and others) are now automatically convert to <literal>UTF-8</literal> (Bug #47677).
  * Better error messages are now provided for missing mandatory columns. <literal>record_uid</literal and <literal>source_uid</literal> are now always part of <literal>mandatory_attributes</literal>. It is now verified that the CSV columns configured in <literal>csv:mapping</literal> exist in the CSV file (Bug #47681).
-bug: [45673, 47677, 47681]
+ * It is now checked, that the properties listed in the configuration of <literal>mandatory_attributes</literal> exist and are non-empty (Bug #47691).
+bug: [45673, 47677, 47681, 47691]
