--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-lib
-fix: 
+fix: 11.0.1-23A~4.3.0.201810020936
 desc: |
  * Check for existing computer objects in school creation process before attempting to blindly create one (Bug #47408).
 bug: [47408]
