--- a/test/branch-tests/base/school-two-slaves.cfg
+++ b/test/branch-tests/base/school-two-slaves.cfg
@@ -55,6 +55,7 @@ command2:
  . utils.sh && run_join_scripts
  . utils.sh && assert_join
  . utils.sh && install_ucs_test
+ . utils.sh && install_apps_test_packages ucsschool
 command3:
  . utils.sh && do_reboot
  . utils.sh && wait_for_reboot
