--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -6,4 +6,5 @@ src: ucs-school-lib
 fix: 11.0.1-23A~4.3.0.201810020936
 desc: |
  * Check for existing computer objects in school creation process before attempting to blindly create one (Bug #47408).
-bug: [47408]
+ * Extend School validation to check for distinct hostnames for educational and administrative dcs (Bug #46765).
+bug: [47408, 46765]
