--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-import
-fix: 16.0.2-58A~4.3.0.201810050941
+fix: 
 desc: |
  * Even when the import abots, statistics are now still written to the terminal, passwords and summary CSV files are written to disk (Bug #45673).
  * CSV files encoded in <literal>ISO 8859-1</literal> (and others) are now automatically convert to <literal>UTF-8</literal> (Bug #47677).
@@ -11,4 +11,5 @@ desc: |
  * It is now checked, that the properties listed in the configuration of <literal>mandatory_attributes</literal> exist and are non-empty (Bug #47691).
  * Invalid school class names are now caught in dry-run (Bug #47861).
  * Replace the old create_ou script with one using the ucsschool.lib (Bug #46765).
-bug: [45673, 47677, 47681, 47691, 47861, 46765]
+ * The UMC User Import module now shows useful error messages (Bug #45165).
+bug: [45673, 47677, 47681, 47691, 47861, 46765, 45165]
