--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -6,6 +6,6 @@ src: ucs-school-lib
 fix: 11.0.1-26A~4.3.0.201810121233
 desc: |
  * Check for existing computer objects in school creation process before attempting to blindly create one (Bug #47408).
- * Extend School validation to check for distinct hostnames for educational and administrative dcs (Bug #46765).
+ * Extend School validation for hostnames of educational and administrative dcs (Bug #46765).
  * Prevent writing of role attribute when deactivated via UCR (Bug #47967).
 bug: [47408, 46765, 47967]
