--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -5,7 +5,7 @@ scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-lib
 fix: 11.0.1-27A~4.3.0.201810240853
 desc: |
- * Check for existing computer objects in school creation process before attempting to blindly create one (Bug #47408).
+ * Check for existing computer objects in school creation process and use it if possible (Bug #47408).
  * Extend School validation for hostnames of educational and administrative dcs (Bug #46765).
  * Prevent writing of role attribute when deactivated via UCR (Bug #47967).
 bug: [47408, 46765, 47967]
