--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -8,4 +8,5 @@ desc: |
  * Check for existing computer objects in school creation process and use it if possible (Bug #47408).
  * Extend School validation for hostnames of educational and administrative dcs (Bug #46765).
  * Prevent writing of role attribute when deactivated via UCR (Bug #47967).
-bug: [47408, 46765, 47967]
+ * Add simple interface to check school membership of computers (Bug #47966).
+bug: [47408, 46765, 47966, 47967]
