--- a/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
+++ b/doc/errata/staging/ucs-school-netlogon-user-logonscripts.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-netlogon-user-logonscripts
 fix: 14.0.1-3A~4.3.0.201810291809
 desc: |
- * Add server password change script to restart ucs-school-user-logonscript-daemon.
-bug: [47895]
+ * Add server password change script to restart ucs-school-user-logonscript-daemon (Bug #47805).
+bug: [47805]
