--- a/doc/errata/staging/ucs-school-umc-import.yaml
+++ b/doc/errata/staging/ucs-school-umc-import.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-umc-import
 fix: 1.0.1-3A~4.3.0.201810161222
 desc: |
- * The UMC User Import module now shows useful error messages (Bug #45165).
+ * Until now, the UMC module "User Import" only displayed a generic and very technical error message when errors occurred. The processing of errors during import has been improved so that errors that occurred can now be distinguished more accurately, are displayed better and contain more comprehensible text (Bug #45165).
 bug: [45165]
