--- a/doc/errata/staging/ucs-school-umc-installer.yaml
+++ b/doc/errata/staging/ucs-school-umc-installer.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-umc-installer
 fix: 6.0.0-4A~4.3.0.201811071054
 desc: |
- * Add information text about the new demo school to the installer (Bug #47807).
+ * The description text in the UCS@school Configuration Wizard now contains a hint on how to disable the automatic creation of the demo school during the initial installation/configuration of UCS@school (Bug #47807).
 bug: [47807]
