--- a/doc/errata/staging/ucs-test-ucsschool.yaml
+++ b/doc/errata/staging/ucs-test-ucsschool.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-test-ucsschool
-fix:
+fix: 5.0.3-1A~4.3.0.201811161013
 desc: |
  * Add selenium tests to ucs-test ucsschool (Bug #47978).
 bug: [47978]
