--- a/ucs-school-italc/debian/control
+++ b/ucs-school-italc/debian/control
@@ -2,12 +2,12 @@ Source: ucs-school-italc
 Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
-Build-Depends: debhelper (>> 7.0), libqt4-dev, python2.7, python-qt4,  python-qt4-dev, libitalc-dev (>> 1:2.0.0), python-sip-dev, python2.7-dev, python-support, ucslint
+Build-Depends: debhelper (>> 7.0), qtbase5-dev, python2.7, python-pyqt5, pyqt5-dev, libqca-qt5-2-dev, libqca-qt5-2-plugins, libitalc-dev (>> 1:2.0.0), python-sip-dev, python2.7-dev, python-support, ucslint
 Standards-Version: 3.7.3
 
 Package: python-italc
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, ${sip:Depends}, python-qt4, libitalc (>> 1:2.0.0), python2.7
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, ${sip:Depends}, python-pyqt5, libitalc (>> 1:2.0.0), python2.7
 Description: Intelligent Teaching and Learning with Computers
  iTALC makes it possible, to access and influence the pupils
  activities just from the computer of the teacher. With the
