--- a/doc/errata/staging/ucs-school-ldap-acls-master.yaml
+++ b/doc/errata/staging/ucs-school-ldap-acls-master.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [2]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-ldap-acls-master
-fix: 
+fix: 16.0.3-1A~4.3.0.201811222349
 desc: |
  * Insufficient LDAP permissions and an typo within the LDAP ACLs prevented teachers from resetting student
    passwords if the student is located underneath another school OU. The problem also occurred when a school
