--- a/doc/errata/staging/ucs-school-umc-import.yaml
+++ b/doc/errata/staging/ucs-school-umc-import.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-umc-import
 fix: 1.0.1-4A~4.3.0.201812101048
 desc: |
- * Fix the broken job overview grid after the dojo upgrade (Bug #48303).
+ * Due to the upgrade from dojo to a newer version the job overview in the User Import UMC module did not display any jobs. This error was fixed (Bug #48303).
 bug: [48303]
