Bug #49400: update advisory

--- a/doc/errata/staging/ucs-school-umc-import.yaml
+++ b/doc/errata/staging/ucs-school-umc-import.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [3]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-umc-import
-fix: 
+fix: 1.0.1-5A~4.3.0.201812201355
 desc: |
  * If external SSL certificates (from e.g. let's encrypt) are used on the domaincontroller master and master's FQDN
    differs from the FQDNs within the SSL certificate, the UMC module "Benutzerimport" throwed a traceback. The new
